--- a/style.css
+++ b/style.css
@@ -39,7 +39,6 @@ a{
 main{
     overflow: auto;
     position: relative;
-    top:60px;
     width: 100%;
     height: 100%;;
     scroll-behavior: smooth;
